Fix #53: Overlapping labels in charts

--- a/frontend/stylesheets/style.styl
+++ b/frontend/stylesheets/style.styl
@@ -27,6 +27,9 @@ dt
       left: 20px
       top: 5px
       opacity: 1
+    .x_label
+      &.bottom
+        bottom: 0
     &:hover strong
       opacity: 0
 
